node-main/deps/v8/test/message/fail/async-arrow-param-after-rest.out
*%(basename)s:7: SyntaxError: Rest parameter must be last formal parameter
async (...x, y) => 10
           ^
SyntaxError: Rest parameter must be last formal parameter

